error.txt
INFO:     Will watch for changes in these directories: ['C:\\Users\\aaron\\Desktop\\grace-3.1--Aaron-new2']
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [32560] using WatchFiles
Exception in thread grace-boot-diag:
Traceback (most recent call last):
  File "C:\Python314\Lib\threading.py", line 1082, in _bootstrap_inner
    self._context.run(self.run)
    ~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Python314\Lib\threading.py", line 1024, in run
    self._target(*self._args, **self._kwargs)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\aaron\Desktop\grace-3.1--Aaron-new2\backend\cognitive\autonomous_diagnostics.py", line 71, in on_startup
    from cognitive.test_framework import smoke_test
  File "C:\Users\aaron\Desktop\grace-3.1--Aaron-new2\backend\cognitive\test_framework.py", line 261
    def _check_database():
IndentationError: expected an indented block after 'try' statement on line 260
